[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "efu-watcher"
version = "1.0.0"
description = "Real-time EFU file list daemon for voidtools Everything via inotify"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "inotify-simple>=1.3.5",
]

[project.scripts]
efu-watcher = "efu_watcher.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["efu_watcher*"]
